# Starbucks-DCF-Valuation-Tool

./: app.py  dcf_engine.py  main.py  pyproject.toml  test_dcf.py
app/: dcf.py  financial_researcher.py  guru.py  main.py  main_dcf.py  merger.py
pages/: 1_Dashboard.py  2_Analysis.py  3_Methodology.py
product/: README.md  merger-model-overview.md  product-overview.md  product-roadmap.md
