[project]
name = "demo-driver-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "numpy-financial>=1.0.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "streamlit>=1.53.1",
    "yfinance>=1.1.0",
]
